fix: audio-section: duation and button alignment affected by <audio> rendered differently in chrome and ff

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -700,6 +700,11 @@ footer div {
     display: inline-block;
 }
 
+
 #waveform {
-    height: 73px;
+    height: 100px;
+}
+
+audio {
+    display: none;
 }
